--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>RPS Game</title>
+  <title>Game</title>
   <!-- Link CSS here -->
   <link type='text/css' rel='stylesheet' href='css/style.css' />
 </head>
@@ -29,11 +29,11 @@
       <div id="choices" class="row">
         <div>
           <h4>User Choice</h4>
-          <p id="userChoice"></p>
+          <p id="userChoice">How to play this game?? Well in this game you are going to play Scissors, then below you would state which one you picked bwtween the three opions and depending on you answer, either the computer or the use will win the round</p>
         </div>
         <div>
           <h4>Computer Choice</h4>
-          <p id="computerChoice"></p>
+          <p id="computerChoice">In here the computer will choice its choice</p>
         </div>
       </div>
       <div id="result"></div>
